--- a/Server/package.json
+++ b/Server/package.json
@@ -9,7 +9,9 @@
   "author": "Amine Farhat",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.18.1",
+    "lodash": "^4.17.21",
     "socket.io": "^4.5.1"
   }
 }
